# aweSOM

./: .flake8  .gitattributes  .gitignore  .lgtm.yml  CODE_OF_CONDUCT.md  LICENSE  README.md  __init__.py  awesom-env.yml  dvc.yaml  flake8  hp_search.sh  hp_search_GIN.sh  hps_weightbce.sh  main.py  mypy.ini  predict.sh  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_vis.txt  setup.cfg  setup.py  som-gnn-env.yml  som_gnn.py  test.sh  train.sh  visualize_output.ipynb
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml  ci.yml
DATA_FOLDER/preprocessed/: atom_ids.npy  labels.npy  mol_ids.npy
awesom/: __init__.py  create_dataset.py  dataset.py  dataset_utils.py  delete.py  gpu_utils.py  graph_neural_nets.py  lightning_module.py  lightning_modules.py  metrics_utils.py  model.py  models.py  process_input_data.py  pyg_dataset_creator.py  stochastic_loss.py  training_module.py  utils.py
data/: edge_features.npy  labels.npy  mol_ids.npy
data/3A4/: data.sdf
data/capsaicin/: data.sdf
data/data_EBoMD2/: graph.json  node_features.npy
data/data_metaQSAR/: mol_ids.npy
data/data_zaretzki/: mol_ids.npy  train_val_molids.txt
data/metaQSAR/: labels.npy  metaQSAR_test_molids.txt  metaQSAR_train_molids.txt  metaQSAR_val_molids.txt  mol_ids.npy  test_set_metaqsar.txt  train_set_metaqsar.txt  validation_set_metaqsar.txt
data/propanolol/: data.sdf
data/test/: data.sdf
data/train/: data.sdf
data/xenosite/: xenosite.sdf  xenosite_test_molids.txt  xenosite_train_molids.txt  xenosite_val_molids.txt
data/zaretzki/: data.sdf
data/zaretzki_RDKit/: data.sdf
data_EBoMD2/: atom_ids.npy  data.sdf  labels.npy  mol_ids.npy
data_metaQSAR/: atom_ids.npy
data_xenosite/: labels.npy  mol_ids.npy
data_zaretzki/: atom_ids.npy  data.sdf  test_molids.txt
devtools/: README.md
docs/: Makefile  README.md  api.rst  conf.py  getting_started.rst  index.rst  make.bat
load_data/: __init__.py  compute_features.py  process_input_data.py  pyg_dataset_creator.py
load_data/data/: labels.npy  mol_ids.npy
models/: __init__.py  gin.py  graph_neural_nets.py  mlp.py
output/: model.pt  results.txt
output_xenosite/: model.pt
scripts/: __init__.py  cross_validate.py  cv_hp_search.py  delete2.py  finetune.py  infer.py  main_som.py  old_cv_hp_search.py  old_test.py  predict.py  preprocess.py  rf.py  test.py  train.py  train_gat.py  train_gatv2.py  train_gin.py  train_gin_no_pool.py  train_mf.py  train_tf.py  training_data_growth.py
som_gnn/: __init__.py  graph_neural_nets.py  process_input_data.py  pyg_dataset_creator.py  runner.py  som_dataset.py  som_gnn.py  utils.py
src/: __init__.py  graph_neural_nets.py  process_input_data.py  pyg_dataset_creator.py  runner.py  utils.py
(+1291 files in other folders)
