[build-system]
requires = ["hatchling<=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "awesom"
version = "2024.0.0"
dependencies = [
    "lightning>=2.0.7",
    "matplotlib>=3.7.2",
    "networkx>=2.8.4",
    "numpy>=1.25.2",
    "optuna>=3.3.0",
    "pandas>=1.5.2,<2.2.0",
    "pytorch-lightning>=2.0.7",
    "rdkit==2023.3.3",
    "scikit-learn>=1.3.0",
    "torch>=2.0.1",
    "torchmetrics>=1.0.3",
    "torch-geometric>=2.3.1",
]
requires-python = ">=3.10"
authors = [
  {name = "Roxane Jacob", email = "roxane.axel.jacob@univie.ac.at"},
]
maintainers = [
  {name = "Roxane Jacob", email = "roxane.axel.jacob@univie.ac.at"}
]
description = "AweSOM: Predicts Sites of Metabolism (SoMs) with Uncertainty Estimation."
readme = "README.md"
license = {text = "MIT License"}
